--- a/package.json
+++ b/package.json
@@ -82,7 +82,8 @@
 		"lazysizes": "^5.2.0",
 		"pixi.js": "^5.2.1",
 		"plyr": "^3.6.2",
-		"swiper": "^5.3.6"
+		"swiper": "^5.3.6",
+		"wowjs": "^1.1.3"
 	},
 	"prettier": {
 		"trailingComma": "es5",
