--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
 		"gulp-uglify-es": "^2.0.0",
 		"node-sass": "^4.13.1",
 		"prettier": "2.0.4",
+		"slick-carousel": "^1.8.1",
 		"vinyl-buffer": "^1.0.1",
 		"vinyl-source-stream": "^2.0.0"
 	},
